--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: Harry dB
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -15,12 +15,6 @@ GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
 enableSemanticSearch: false
 operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
 description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
+  Notes on experiments and work
 page_title:
-  "🪴 Quartz 3.3"
-links:
-  - link_name: Twitter
-    link: https://twitter.com/_jzhao
-  - link_name: Github
-    link: https://github.com/jackyzha0
+  "Harry dB notes"
